@@ -1,7 +1,58 @@
-Course Review Application
+# Course Review Application
 
+This is a JavaFX application for managing and displaying course reviews. The application allows users to view and interact with course comments.
 
-## To Run
+## Features
 
-Set the JavaFX configuration to run the LoginApplication.java class. 
+- Display course comments in a user-friendly interface.
+- Supports text wrapping and adjustable text area width for comments.
+
+## Prerequisites
+
+- Java Development Kit (JDK) 17 or later
+- JavaFX SDK 17.0.11
+
+## Setup
+
+1. **Clone the repository:**
+
+   ```bash
+   git clone https://github.com/yourusername/course-review-app.git
+   cd course-review-app
+   ```
+
+2. **Download and set up JavaFX:**
+
+   - Download the JavaFX SDK from [Gluon](https://gluonhq.com/products/javafx/).
+   - Extract the SDK to a directory of your choice.
+
+3. **Configure your IDE:**
+
+   - Add the JavaFX library to your project's build path.
+   - Set VM options for running the application:
+     ```
+     --module-path /path/to/javafx-sdk-17.0.11/lib --add-modules javafx.controls,javafx.fxml
+     ```
+
+## Running the Application
+
+1. Open the project in your preferred IDE.
+2. Run the `LoginApplication` class to start the application.
+
+## Project Structure
+
+- `src/main/java/edu/virginia/sde/reviews/courseReview/`: Contains the main application and controller classes.
+- `resources/`: Contains JavaFX SDK and other resources.
+
+## License
+
+This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details.
+
+## Contributing
+
+Contributions are welcome! Please fork the repository and submit a pull request for any improvements or bug fixes.
+
+## Contact
+
+For any questions or feedback, please contact [kyj5ra@virginia.edu](mailto:kyj5ra@virginia.edu). 
 
